--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap');
 
 * {
     padding: 0;
@@ -6,7 +7,8 @@
 }
 
 body {
-    font-family: 'Anton', sans-serif;
+    /* font-family: 'Anton', sans-serif; */
+    font-family: 'Edu NSW ACT Foundation', cursive;
 }
 
 .container {
@@ -39,8 +41,8 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 60px;
-    padding: 20px 0;
+    height: 30px;
+    /* padding: 5px 0; */
     font-size: 13px;
 }
 
@@ -69,20 +71,73 @@ body {
     display: none;
 }
 
-
+/* hero section */
 .hero {
-    background-image: url(./Assets/Images/fela-kuti.webp) ;
-    background-position: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./assets/images/fela-kuti.webp) ;
+    /* background-position: center; */
     background-repeat: no-repeat;
     background-size: cover;
-    height: 20rem;
-    /* width: 100%; */
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.hero p {
+.hero h1 {
     color: #ffffff;
     font-weight: 900;
     text-transform: uppercase;
+    font-size: 6rem;
+    margin: 0 24vw;
+    text-align: center;
+}
+
+hr {
+    background-color: bisque;
+    width: 1rem;
+    height: 1rem;
+}
+
+.bio-content {
+    margin: 2rem;
+    display: grid;
+    grid-template-columns: 2fr 1fr;    
+  
+}
+
+#biography h2{
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 2rem;
+    color:#0C1024;
+}
+
+
+.bio-content img {
+    width: 60vw;
+    height: 60vh;
+    padding-left: 2rem;
+}
+
+.bio-content p {
+    text-align: justify;
+}
+
+.bio-content button:hover {
+    cursor: pointer;
+    background-color: #E1D8EB;
+    color: #0C1024;
+    border: 1px solid #E1D8EB;
+}
+
+.bio-content button {
+    margin-top: 2rem;
+    background-color: #0C1024;
+    color: #E1D8EB;
+    width: 7rem;
+    height: 3rem;
+    border: 1px solid #0C1024;
+    border-radius: 1rem;
 }
 
 /* media query */
@@ -96,7 +151,7 @@ body {
     .main-nav ul.right-menu {
        margin-right: 50px; 
     }
-    .main-navul.main-menu  {
+    .main-nav ul.main-menu  {
         display: block;    
         position: absolute;
         top: 0;
@@ -109,5 +164,57 @@ body {
         padding: 30px;
         transform: translateX(-500px);
         transition: transform 0.5s ease-in-out;
+    }
+
+    .main-nav ul.main-menu li {
+        padding: 10px;
+        border-bottom: 1px solid #cccccc;
+        font-size: 14px;
+    }
+
+    .main-nav ul.main-menu li:last-child {
+        border-bottom: 0;
+    }
+
+    .main-nav ul.main-menu.show {
+        transform: translateX(-20px);
+    }
+    
+    .logo {
+        height: 2rem;
+        width: 2rem;
+    }
+
+    .right-menu img {
+        height: 2rem;
+        width: 2rem;
+    }
+
+    .menu-btn {
+        top: 20px;
+        right: 30px;
+    }
+
+    .hero h1 {
+        margin: 0 20vw;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    .hero h1 {
+        /* margin: 0 1vw; */
+        font-size: 3rem;
+    }
+    .bio-content {
+        margin: 2rem;
+        display: block;    
+    }
+    .bio-content button {
+        margin-bottom: 2rem;  
+    }
+    
+    .bio-content img {
+        width: 40vw;
+        height: 40vh;
     }
 }
