--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ a {
     color: #ffffff;
     font-weight: 900;
     text-transform: uppercase;
-    font-size: 6rem;
+    font-size: 4rem;
     margin: 0 24vw;
     text-align: center;
 }
@@ -138,13 +138,14 @@ a {
 
 .bio-container img {
     width: 100%;
-    max-width: 600px;
+    max-width: 800px;
     height: auto;
     margin-top: 1rem;
 }
 
 .bio-container p {
     text-align: justify;
+    font-size: 1.5rem;
 }
 
 .bio-container button:hover {
@@ -163,6 +164,7 @@ a {
     border-radius: 0.5rem;
 }
 
+/* songs section */
 #songs {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./Assets/Images/fela\ on\ stage.webp);
     background-repeat: no-repeat; 
@@ -180,6 +182,7 @@ a {
     text-transform: uppercase;
     margin-bottom: 2rem;
     font-weight: 900;
+    font-size: 3rem;
 }
 
 #songs p {
@@ -187,13 +190,14 @@ a {
     text-align: center; 
     margin-left: 20rem;
     margin-right: 20rem;
+    font-size: 1.5rem;
 }
 
 #songs button:hover {
     cursor: pointer;
     background-color: #750D0A;
     color: #E1D8EB;
-    border: 1px solid #750D0A;
+    border: 1px solid #ffffff;
 }
 
 #songs button {
@@ -207,6 +211,81 @@ a {
     border: 1px solid #ffffff;
     border-radius: 0.5rem;
 }
+
+/* performance section */
+#performance {
+    margin: 5rem 3rem;
+}
+
+.performance-content .section-title {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-gap: 1%;
+}
+#performance hr {
+    background-color: #0C1024;
+    width: 4rem;
+    height: 0.2rem;
+    border-radius: 0.5rem;
+    border: 1px solid #0C1024;
+    margin-top: 2.8rem;
+}
+
+.performance-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    grid-gap: 3%;   
+  
+}
+
+#performance h1{
+    text-align: left;
+    text-transform: uppercase;
+    margin-top: 2rem;
+    color:#0C1024;
+    font-weight: 900;
+    margin-bottom: 1rem;
+}
+
+
+.show-clip video {
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    margin-top: 1rem;
+}
+
+.show-clip p {
+    font-style: italic;
+    font-weight: 600;
+    font-size: 1rem;
+}
+
+.performance-container p {
+    text-align: justify;
+    font-size: 1.5rem;
+}
+
+.performance-span {
+    font-weight: 900;
+}
+
+.performance-container button:hover {
+    cursor: pointer;
+    background-color: #0C1024;
+    color: #E1D8EB;
+    border: 1px solid #E1D8EB;
+}
+
+.performance-container button {
+    margin-top: 2rem;
+    background-color: transparent;
+    color: #0C1024;
+    padding: 1rem 2rem;
+    border: 1px solid #0C1024;
+    border-radius: 0.5rem;
+}
+
 /* media query */
 @media only screen and (max-width: 960px) {
     .menu-btn {
@@ -265,6 +344,36 @@ a {
     .hero h1 {
         margin: 0 20vw;
     }
+
+    .bio-container p {
+        font-size: 13px;
+    }
+    
+    .bio-container button {
+        padding: 0.5rem 1rem;
+    }
+    #songs h1 {
+        margin-bottom: 2rem;
+        font-weight: 600;
+    }
+    
+    #songs p {
+        margin-left: 8rem;
+        margin-right: 8rem;
+        font-size: 13px;
+    }
+    
+    #songs button {
+        padding: 0.5rem 1rem;
+    }
+
+    .performance-container p {
+        font-size: 13px;
+    }
+    
+    .performance-container button {
+        padding: 0.5rem 1rem;
+    }
 }
 
 @media only screen and (max-width: 768px){
@@ -292,6 +401,23 @@ a {
 .hero p {
     font-size: 0.8rem;
 }
+#performance {
+    margin: 10% 4%;
+}
+
+.performance-content .section-title {
+    grid-template-columns: 1fr 7fr;
+}
+
+.performance-container {
+    grid-template-columns: 1fr;    
+}
+
+.performance-container video {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
 }
 
 @media only screen and (max-width: 425px) {
@@ -304,9 +430,12 @@ a {
         /* margin: 2rem; */
         display: block;    
     }
+    .bio-container p {
+        font-size: 13px;
+    }
     .bio-container button {
         margin-bottom: 2rem;
-        padding: 0.7rem 1rem;        
+        padding: 0.5rem 1rem;        
     }
     
     .bio-container img {
@@ -318,5 +447,34 @@ a {
     }
     .section-title {
         grid-template-columns: 1fr 2fr;
+    }
+    #songs h1 {
+        margin-bottom: 2rem;
+        font-weight: 600;
+    }
+    
+    #songs p {
+        margin-left: 5rem;
+        margin-right: 5rem;
+        font-size: 13px;
+    }
+    
+    #songs button {
+        padding: 0.5rem 1rem;
+    }
+
+    .performance-content .section-title {
+        grid-template-columns: 1fr 2fr;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    #songs h1 {
+        margin-bottom: 1.8rem;
+    }
+    
+    #songs p {
+        margin-left: 3rem;
+        margin-right: 3rem;
     }
 }
