--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ a {
 
 /* songs section */
 #songs {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./Assets/Images/fela\ on\ stage.webp);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./Assets/Images/fela-on-stage.webp);
     background-repeat: no-repeat; 
     background-size: cover;
     /* background-position: center; */
