added biography page

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body {
     font-family: 'Edu NSW ACT Foundation', cursive;
+    font-size: 13px;
 }
 
 a {
@@ -405,27 +406,6 @@ a {
     background: linear-gradient(#1E0606, #ffffff);
     overflow: hidden;
 }
-
-@keyframes slides {
-    0% {transform: translateX(0);}
-    25% {transform: translateX(0);}
-    30% {transform: translateX(-100%);}
-    50% {transform: translateX(-100%);}
-    55% {transform: translateX(-200%);}
-    75% {transform: translateX(-200%);}
-    80% {transform: translateX(-300%);}
-    100% {transform: translateX(-300%);}
-}
-
-/* .slides {
-    width: 100%;
-    display: flex;
-    transform: translateX(-800px);
-    animation-name: slides;
-    animation-duration: 10s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-} */
 
 .section-title2 h1 {
     text-align: center;
