--- a/biograpy_page/biography.css
+++ b/biograpy_page/biography.css
@@ -1,6 +1,67 @@
+@keyframes moves {
+    from {
+        left: 0px;
+    }
+    to {
+        left: 650px;
+    }
+}
+
 #biography img {
     height: auto;
     width: 100%;
     max-width: 550px;
     box-shadow: 15px 15px #E06363;
+    animation: moves 0.8s ease-in-out backwards;
+    position: relative;
+}
+
+#activism {
+    margin: 5rem 3rem;
+}
+
+.title h1 {
+    color: #1E0606;
+    font-weight: 900;
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.title-content p {
+    font-size: 1.7rem;
+    text-align: justify;
+}
+
+/* media query */
+@media only screen and (max-width: 960px) {
+    #biography img {
+        max-width: 450px;
+    }
+
+    .title-content p {
+        font-size: 15px;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    #biography img {
+        max-width: 350px;
+    }
+
+    #activism {
+        margin: 3rem 1rem;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    #biography img {
+        max-width: 300px;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    #biography img {
+        max-width: 250px;
+    }
 }
